--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "league/plates": "^3.1",
-        "jclyons52/php-query": "^1.2"
+        "jclyons52/php-query": "^1.2",
+        "league/container": "^2.2"
     },
      "require-dev": {
         "phpunit/phpunit" : "4.*",
