--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,13 @@
 {
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@github.com:phpieces/framework.git"
+        }
+    ],
     "require": {
-        "league/plates": "^3.1",
         "jclyons52/php-query": "^1.2",
-        "league/container": "^2.2"
+        "phpieces/framework": "dev-master"
     },
      "require-dev": {
         "phpunit/phpunit" : "4.*",
