--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,7 @@
 {
-    "repositories": [
-        {
-            "type": "vcs",
-            "url":  "git@github.com:phpieces/framework.git"
-        }
-    ],
     "require": {
         "jclyons52/php-query": "^1.2",
-        "phpieces/framework": "dev-master"
+        "phpieces/framework": "0.1.1"
     },
      "require-dev": {
         "phpunit/phpunit" : "4.*",
